Dynamically grab flags
https://github.com/BentoBoxWorld/BentoBox/issues/1915